Initial iOS project setup with auth and home flow

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-Pods/
+# Xcode
 DerivedData/
-xcuserdata/
+*.xcuserstate
+*.xcuserdata
+*.xccheckout
+*.xcscmblueprint
+
+# CocoaPods
+Pods/
+Podfile.lock
+
+# Build
+build/
+*.ipa
+
+# macOS
+.DS_Store
+
+# Logs
+*.log
