--- a/SwiftDemo/Info.plist
+++ b/SwiftDemo/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need photo access to select your profile picture</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need camera access to upload your profile photo.</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDisplayName</key>
 	<string>MannaHealPro</string>
 	<key>LSBundleContainsCoreMLmlmodelc</key>
