--- a/SwiftDemo/Info.plist
+++ b/SwiftDemo/Info.plist
@@ -2,20 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need photo access to select your profile picture</string>
-	<key>NSCameraUsageDescription</key>
-	<string>We need camera access to upload your profile photo.</string>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
-	<key>CFBundleDisplayName</key>
-	<string>MannaHealPro</string>
-	<key>LSBundleContainsCoreMLmlmodelc</key>
-	<false/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>MannaHealPro</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -27,11 +21,21 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>LSBundleContainsCoreMLmlmodelc</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This app does not access Apple Music. This permission is required due to system frameworks or third-party libraries included in the app.</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>We use Bluetooth to scan, connect, and sync health data from your smart ring</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need camera access to upload your profile photo.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need photo access to select your profile picture</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
