--- a/SwiftDemo/Info.plist
+++ b/SwiftDemo/Info.plist
@@ -60,6 +60,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -82,5 +83,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to send emergency medical assistance to your exact location when health alerts are triggered.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need continuous access to your location for emergency health monitoring. This allows us to send ambulance services to your exact location if your vital signs reach critical levels, even when the app is not actively in use.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need continuous access to your location for emergency health monitoring and to dispatch medical assistance when needed.</string>
 </dict>
 </plist>
