--- a/SwiftDemo/Info.plist
+++ b/SwiftDemo/Info.plist
@@ -61,6 +61,7 @@
 	<array>
 		<string>bluetooth-central</string>
 		<string>location</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
